[project]
name = "celeryspread"
version = "0.1.0"
description = "Capability-based Celery task routing with lazy queue awakening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["celeryspread"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
